# vcm

./: ConstructorCodeForLateBindingfft.cpp  Dejitter.cpp  F1QClean.cpp  F2QBokeh.cpp  F2QFilters.h  F2QLimit.cpp  F2Quiver.cpp  FQBlur.cpp  FQCorrelation.cpp  FQDomainHelper.h  FQSharp.cpp  README.md  colorconverter.h  compat.h  fftwlite.h  meson.build  modAmplitude.cpp  modHistogram.cpp  modMedian.cc  modNeural.cpp  moveDeBarrel.cpp  vcm.cpp
.github/workflows/: build.yaml
docs/: freqScript.html  miscScript.html  modScript.html
